--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/runtime": "^7.14.0",
     "@next-auth/prisma-legacy-adapter": "0.1.2",
     "@next-auth/typeorm-legacy-adapter": "0.1.4",
+    "@types/node": "^18.13.0",
     "futoin-hkdf": "^1.3.2",
     "jose": "^1.27.2",
     "jsonwebtoken": "^8.5.1",
